test/corpus/instructions/address.test
==========
[instructions/address] address without offset
==========
foo ($s0)
---

(program
  (instruction
    mnemonic: (instruction_mnemonic)
    operands: (operands
      (parenthesized_expression
        arguments: (operands
          (register))))))

==========
[instructions/address] address with decimal offset
==========
foo -100($s0)
---

(program
  (instruction
    mnemonic: (instruction_mnemonic)
    operands: (operands
      (parenthesized_expression
        head: (decimal)
        arguments: (operands
          (register))))))

==========
[instructions/address] address with label
==========
foo bar($s0)
---

(program
  (instruction
    mnemonic: (instruction_mnemonic)
    operands: (operands
      (parenthesized_expression
        head: (symbol)
        arguments: (operands
          (register))))))

==========
[instructions/address] address with simple expression offset
==========
foo bar+100($s0)
---

(program
  (instruction
    mnemonic: (instruction_mnemonic)
    operands: (operands
      (parenthesized_expression
        head: (binary_expression
          left: (symbol)
          operator: (additive_operator)
          right: (decimal))
        arguments: (operands
          (register))))))

==========
[instructions/address] address with parenthesized expression offset
==========
foo (bar+0x123)($s0)
---

(program
  (instruction
    mnemonic: (instruction_mnemonic)
    operands: (operands
      (parenthesized_expression
        head: (parenthesized_expression
          arguments: (operands
            (binary_expression
              left: (symbol)
              operator: (additive_operator)
              right: (hexadecimal))))
        arguments: (operands
          (register))))))
